--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
-  <title>tdd todo</title>
+  <title>To Do List</title>
+  <meta name="description" content="to do list app">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-  <div id="todo-container">
-    <ul>
-    </ul>
-  </div>
-  <form id="add-todo">
-    <input type="text" name="description" value="">
-    <input type="submit" name="" value="Submit">
-  </form>
+  <main role="main">
+
+    <section>
+      <h1>To Do List App</h1>
+    </section>
+    
+    <div id="todo-container">
+      <ul>
+      </ul>
+    </div>
+    <form id="add-todo">
+      <input type="text" name="description" value="" placeholder="add to do list item here">
+      <input type="submit" name="" value="Submit">
+    </form>
+  </main>
 </body>
 <script type="text/javascript" src="./logic.js"></script>
 <script type="text/javascript" src="./dom.js"></script>
