--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <h1>To Do List App</h1>
     </section>
     
+    <div id="sort-container">
+      <button class="sort" aria-label="sort button">&#8597; Sort Items</button>
+    </div>
     <div id="todo-container">
     </div>
 
